// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialState should return a valid initial state 1`] = `
Object {
  "frontity": Object {
    "initial": Object {
      "page": 1,
      "path": "/post",
    },
    "mode": "html",
    "name": "site",
    "packages": Array [
      "package1",
      "package2",
    ],
    "platform": "server",
    "prop1": "overwritten by package2",
    "url": "https://site.com",
  },
  "package1": Object {
    "prop2": "prop2",
  },
  "package2": Object {
    "prop3": "prop2",
  },
}
`;

exports[`initialState should return a valid path and page 1`] = `
Object {
  "frontity": Object {
    "initial": Object {
      "page": 2,
      "path": "/category/nature/",
    },
    "mode": "html",
    "name": "site",
    "packages": Array [
      "package1",
      "package2",
    ],
    "platform": "server",
    "prop1": "overwritten by package2",
    "url": "https://site.com",
  },
  "package1": Object {
    "prop2": "prop2",
  },
  "package2": Object {
    "prop3": "prop2",
  },
}
`;

exports[`initialState should return a valid path and page with home 1`] = `
Object {
  "frontity": Object {
    "initial": Object {
      "page": 1,
      "path": "/",
    },
    "mode": "html",
    "name": "site",
    "packages": Array [
      "package1",
      "package2",
    ],
    "platform": "server",
    "prop1": "overwritten by package2",
    "url": "https://site.com",
  },
  "package1": Object {
    "prop2": "prop2",
  },
  "package2": Object {
    "prop3": "prop2",
  },
}
`;

exports[`initialState should return a valid path and page with paginated home 1`] = `
Object {
  "frontity": Object {
    "initial": Object {
      "page": 2,
      "path": "/",
    },
    "mode": "html",
    "name": "site",
    "packages": Array [
      "package1",
      "package2",
    ],
    "platform": "server",
    "prop1": "overwritten by package2",
    "url": "https://site.com",
  },
  "package1": Object {
    "prop2": "prop2",
  },
  "package2": Object {
    "prop3": "prop2",
  },
}
`;
